# backend_render-pro

./: main.py  pyproject.toml  replit.md  requirements.txt
app/: __init__.py
app/routes/: create_league.py  h2h.py  leagues.py  teams.py
app/services/: h2h_analyzer.py  sofascore.py  update_csv.py
app/utils/: file_manager.py  team_normalizer.py
backend/: README_BACKEND.md  main.py  requirements.txt
backend/routers/: h2h.py  leagues.py  logos.py  teams.py  update.py  upload.py
backend/updater/: __init__.py  sofascorer.py  update_engine.py
backend/utils/: csv_loader.py  h2h_engine.py  logo_cache.py
config/: settings.py
data/leagues/italia-serie-a/: cagliari.csv  como.csv  fiorentina.csv  genoa.csv  hellas_verona.csv  italy---serie-a---ac-milan.csv  italy---serie-a---as-roma.csv  italy---serie-a---atalanta.csv  italy---serie-a---bologna.csv  italy---serie-a---cremonese.csv  italy---serie-a---inter-milan.csv  italy---serie-a---napoli.csv  italy---serie-a---udinese.csv  juventus.csv  lazio.csv  liga.json  parma.csv  torino.csv
data/leagues/laliga/: alaves.csv  athletic_bilbao.csv  atletico_madrid.csv  barcelona.csv  celta_vigo.csv  elche.csv  espanyol.csv  getafe.csv  girona.csv  levante.csv  liga.json  mallorca.csv  osasuna.csv  rayo_vallecano.csv  real_betis.csv  real_madrid.csv  real_oviedo.csv  real_sociedad.csv  sevilla_fc.csv  valencia.csv  villarreal.csv
painel/: README.md  index.html  replit.md  tailwind.config.ts  vite.config.ts
painel/src/: index.css
painel/src/components/: AnalysisResults.tsx  ImportDialog.tsx  (+1 more)
src/services/: api.js
(+1 files in other folders)
